--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MyLocator</string>
+    <string name="home_title">My Locator</string>
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
