--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,11 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_map">Map</string>
+    <string name="title_list">List</string>
+    <string name="title_add_mosque">Add Mosque</string>
+    <string name="title_qibla">Qibla Layout</string>
+    <string name="title_more">More Layout</string>
+
 </resources>
